# agricy

.github/workflows/: buildroot.yml  ci.yml
app/: CMakeLists.txt
app/include/: Database.hpp  SensorSimulator.hpp
app/src/: Database.cpp  SensorSimulator.cpp  main.cpp
app/web/: app.js  index.html  style.css
docker/: Dockerfile
